--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -27,12 +27,13 @@ jobs:
             ~/Library/Caches/Homebrew
             /usr/local/Cellar/shfmt
             /usr/local/Cellar/shellcheck
-          key: ${{ runner.os }}-brew-quality-${{ hashFiles('**/Brewfile') }}
+            /usr/local/Cellar/golangci-lint
+          key: ${{ runner.os }}-brew-quality-v2-${{ hashFiles('**/Brewfile') }}
           restore-keys: |
-            ${{ runner.os }}-brew-quality-
+            ${{ runner.os }}-brew-quality-v2-
 
       - name: Install tools
-        run: brew install shfmt shellcheck
+        run: brew install shfmt shellcheck golangci-lint
 
       - name: Set up Go
         uses: actions/setup-go@4dc6199c7b1a012772edbd06daecab0f50c9053c # v5
@@ -75,12 +76,18 @@ jobs:
             ~/Library/Caches/Homebrew
             /usr/local/Cellar/shfmt
             /usr/local/Cellar/shellcheck
-          key: ${{ runner.os }}-brew-quality-${{ hashFiles('**/Brewfile') }}
+            /usr/local/Cellar/golangci-lint
+          key: ${{ runner.os }}-brew-quality-v2-${{ hashFiles('**/Brewfile') }}
           restore-keys: |
-            ${{ runner.os }}-brew-quality-
+            ${{ runner.os }}-brew-quality-v2-
 
       - name: Install tools
-        run: brew install shfmt shellcheck
+        run: brew install shfmt shellcheck golangci-lint
+
+      - name: Set up Go
+        uses: actions/setup-go@4dc6199c7b1a012772edbd06daecab0f50c9053c # v5
+        with:
+          go-version: '1.24.6'
 
       - name: Run check script
         run: ./scripts/check.sh --no-format
